--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
         "php-http/guzzle6-adapter": "^1.0"
     },
     "require-dev": {
+        "eventum/eventum": "^3.10.10",
+        "horde/text-flowed": "dev-patch-1 as 2.0.3",
+        "horde/util": "dev-patch-1 as 2.5.8",
         "league/commonmark": "^1.5.4",
         "pimple/pimple": "^3.0.2",
         "psr/log": "^1.1"
